@@ -4,7 +4,6 @@
 package de.uka.ilkd.key.settings;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.smt.SolverTypeCollection;
 import de.uka.ilkd.key.smt.solvertypes.SolverType;
@@ -94,7 +93,7 @@ public final class ProofIndependentSMTSettings
         // Z3_CE solver should not be a usable solver union or part of any as it is
         // treated separately.
         for (SolverType type : nonLegacyTypes.stream().filter(t -> t != SolverTypes.Z3_CE_SOLVER)
-                .collect(Collectors.toList())) {
+                .toList()) {
             solverUnions.add(new SolverTypeCollection(type.getName(), 1, type));
         }
 
