@@ -6,7 +6,6 @@ package de.uka.ilkd.key.gui;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -31,7 +30,7 @@ public class KeyboardTacletTest {
         assertEquals(3, KeyboardTacletModel.getClashFreePrefix("impLeft", keywords));
 
         Map<String, String> table = KeyboardTacletModel.buildPrefixTable(keywords);
-        List<String> prefixes = table.keySet().stream().sorted().collect(Collectors.toList());
+        List<String> prefixes = table.keySet().stream().sorted().toList();
         assertEquals("[andL, andR, cut, cut_, i]", prefixes.toString());
     }
 }
